--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <!-- can add bootstrap here -->
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   </head>
+  <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Snowboard Reviews</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Companies</a></li>
+          <li><a href="#">Reviews</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
   <body>
+
     {{{body}}}
   </body>
 </html>
