finsihed put request

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,9 @@
 
 
     {{#each data}}
-        <li>
-            <h3><a href="/snowboard/{{this.id}}">{{this.make}}</a></h3>
+
+        <li class ="col s6">
+            <h3><a href="/snowboard/{{this.id}}">{{this.make}}: {{this.model}}</a></h3>
         </li>
         <hr>
     {{/each}}
