--- a/views/view.hbs
+++ b/views/view.hbs
@@ -13,13 +13,12 @@
             </li>
 
     </ul>
-    <a href="/snowboard" class="waves-effect waves-light btn-large"> Back To List</a>
-    <!-- <form class="delete-button" action="/snowboard{{this.id}}" method="post">
-      <button class="waves-effect waves-light btn-large" type="submit" name="delete-button"> Delete</button>
-  </form>  -->
+    <a href="/snowboard" class="waves-effect waves-light btn-large"> Back To List</a><br><br>
+    <a href="/snowboard/{{this.id}}/edit/" class="waves-effect waves-light btn-large"> Edit</a><br><br>
+
     <form class="delete-button" action="/snowboard/{{this.id}}?_method=DELETE" method="post">
         <button class="waves-effect waves-light btn-large" type="submit" name="delete-button"> Delete</button>
     </form>
-    <!-- <a href="/snowboard{{snowboard.id}}/delete" class="waves-effect waves-light btn-large"> Delete</a> -->
+
     {{/each}}
 </div>
